spacing fixes on results page

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -59,3 +59,6 @@ body {
   box-shadow: none;
 }
 
+.results-buttons {
+  margin-bottom: 10px;
+}
